[gd_scene load_steps=19 format=2]

[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion17.png" type="Texture" id=1]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion19.png" type="Texture" id=2]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion14.png" type="Texture" id=3]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion9.png" type="Texture" id=4]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion22.png" type="Texture" id=5]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion16.png" type="Texture" id=6]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion21.png" type="Texture" id=7]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion11.png" type="Texture" id=8]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion8.png" type="Texture" id=9]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion10.png" type="Texture" id=10]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion12.png" type="Texture" id=11]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion7.png" type="Texture" id=12]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion13.png" type="Texture" id=13]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion15.png" type="Texture" id=14]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion18.png" type="Texture" id=15]
[ext_resource path="res://Effect/EnemyDestroyedEffect/explosion20.png" type="Texture" id=16]
[ext_resource path="res://Effect/effect.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": false,
"name": "effect",
"speed": 15.0
} ]

[node name="EnemyDestroyedEffect" type="AnimatedSprite"]
modulate = Color( 1, 0, 0.701961, 1 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "effect"
frame = 7
script = ExtResource( 19 )
[connection signal="animation_finished" from="." to="." method="_on_EnemyDestroyedEffect_animation_finished"]
