[gd_scene load_steps=12 format=2]

[ext_resource path="res://Effect/HitEffect/explosion2.png" type="Texture" id=1]
[ext_resource path="res://Effect/HitEffect/explosion3.png" type="Texture" id=2]
[ext_resource path="res://Effect/HitEffect/explosion9.png" type="Texture" id=3]
[ext_resource path="res://Effect/HitEffect/explosion8.png" type="Texture" id=4]
[ext_resource path="res://Effect/HitEffect/explosion10.png" type="Texture" id=5]
[ext_resource path="res://Effect/HitEffect/explosion6.png" type="Texture" id=6]
[ext_resource path="res://Effect/HitEffect/explosion4.png" type="Texture" id=7]
[ext_resource path="res://Effect/HitEffect/explosion5.png" type="Texture" id=8]
[ext_resource path="res://Effect/HitEffect/explosion7.png" type="Texture" id=9]
[ext_resource path="res://Effect/effect.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "effect",
"speed": 18.0
} ]

[node name="HitEffect" type="AnimatedSprite"]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "effect"
frame = 8
playing = true
script = ExtResource( 10 )
[connection signal="animation_finished" from="." to="." method="_on_HitEffect_animation_finished"]
