[gd_scene load_steps=18 format=2]

[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion10.png" type="Texture" id=1]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion15.png" type="Texture" id=2]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion16.png" type="Texture" id=3]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion9.png" type="Texture" id=4]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion17.png" type="Texture" id=5]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion7.png" type="Texture" id=6]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion8.png" type="Texture" id=11]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion11.png" type="Texture" id=12]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion12.png" type="Texture" id=13]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion13.png" type="Texture" id=14]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion14.png" type="Texture" id=15]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion19.png" type="Texture" id=16]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion20.png" type="Texture" id=17]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion21.png" type="Texture" id=18]
[ext_resource path="res://Effect/ScreenDestoryedEffect/explosion18.png" type="Texture" id=19]
[ext_resource path="res://Effect/effect.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "effect",
"speed": 15.0
} ]

[node name="ScreenDestroyedEffect" type="AnimatedSprite"]
modulate = Color( 0.513726, 0, 0.701961, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "effect"
frame = 14
script = ExtResource( 20 )
[connection signal="animation_finished" from="." to="." method="_on_ScreenDestroyedEffect_animation_finished"]
