[gd_scene load_steps=10 format=2]

[ext_resource path="res://Effect/explodeEffect/explosion18.png" type="Texture" id=1]
[ext_resource path="res://Effect/explodeEffect/explosion20.png" type="Texture" id=2]
[ext_resource path="res://Effect/explodeEffect/explosion9.png" type="Texture" id=3]
[ext_resource path="res://Effect/explodeEffect/explosion12.png" type="Texture" id=4]
[ext_resource path="res://Effect/explodeEffect/explosion5.png" type="Texture" id=5]
[ext_resource path="res://Effect/explodeEffect/explosion4.png" type="Texture" id=6]
[ext_resource path="res://Effect/explodeEffect/explosion6.png" type="Texture" id=7]
[ext_resource path="res://Effect/effect.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "effect",
"speed": 15.0
} ]

[node name="fireExplodeEffect" type="AnimatedSprite"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "effect"
frame = 2
script = ExtResource( 8 )
[connection signal="animation_finished" from="." to="." method="_on_fireExplodeEffect_animation_finished"]
